# TankOnline

./: .gitattributes  CLAUDE.md  IP_CONFIG.md  README.md  SETUP_WINDOWS_ADMIN.md  bench_wc_config.json  build_server_tank.bat  run_wc_benchmark.bat  run_wc_benchmark.sh  run_wc_overhead.bat  se  start.sh  start_server_tank.bat  stop.sh  tank_speeds.txt  test.cpp  test_all_apis.ps1  test_all_apis.py  test_pack  test_pack.cpp  tu  udptest.cs  unity_log_debug.txt
.claude/: settings.json
BE_CNGOL/: .gitignore  SAGA_PATTERN.md  docker-compose.yml  init-db.sql  manage_java_services.bat
BE_CNGOL/.claude/: settings.local.json
BE_CNGOL/java-meta-services/: README.md  postman_collection.json
BE_CNGOL/java-meta-services/api_gateway/: pom.xml
BE_CNGOL/java-meta-services/auth_service/: pom.xml
BE_CNGOL/java-meta-services/discovery_service/: pom.xml
BE_CNGOL/java-meta-services/history_service/: pom.xml
BE_CNGOL/java-meta-services/matchmaking_service/: pom.xml
BE_CNGOL/java-meta-services/monitoring_service/: pom.xml
BE_CNGOL/java-meta-services/profile_service/: pom.xml
BE_CNGOL/java-meta-services/shop/: pom.xml
BE_CNGOL/script/: generate-proto.sh  run-dev.sh
Do_An_SE315.Q21_Group_4/: .gitignore  README.md  TODO.md  debug_player_tank.json
Do_An_SE315.Q21_Group_4/Tank Legends/: OPTIMIZATION.md
Do_An_SE315.Q21_Group_4/Tank Legends/Assets/: MinimapRenderTex.renderTexture  New Prefab.prefab  TankPrevRenderTex.asset  Tree.prefab  world.json
Do_An_SE315.Q21_Group_4/Tank Legends/Assets/Editor/: DebugTankSpeed.cs  MapExporter.cs  MapLoader.cs
Do_An_SE315.Q21_Group_4/Tank Legends/Assets/Materials/: Blue.mat  Embers.mat  GrassMat.mat  Grey.mat  HeavyTankMat.mat  M_ISO_Mech.mat  MuzzleFlashMat.mat  Red.mat  RobotMat.mat  ShieldMat.mat  TankColour.mat  TankGrey.mat  UIAdditive.mat  White.mat  mat-1.mat  mat-cutout-1.mat
Do_An_SE315.Q21_Group_4/Tank Legends/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
Tank/: .gitignore  CMakeLists.txt  TODO.md  bench_32match_agent.py  bench_metrics_agent.py  bench_wc_live_agent.py  build_server_tank.bat  start_server_tank.bat  vcpkg.json
Tank Legends Management Web/: .gitignore  index.html  package-lock.json  package.json
Tank Legends Management Web/src/: main.jsx  styles.css
Tank/.claude/: settings.json  settings.local.json
Tank/bench_32_match/: CMakeLists.txt  bench_32match.cpp
Tank/bench_worst_case/: CMakeLists.txt  HOW_TO_USE_LIVE.md  bench_wc_live.cpp  bench_worst_case_old_version.cpp  bench_worst_case_spread.cpp  grafana_bench_dashboard.json  run_bench.ps1
Tank/bit_packing/: CMakeLists.txt  main.cpp
Tank/bit_packing/src/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  PlayerState.h  ReadStream.cpp  ReadStream.h  Serialization.h  SerializationUtils.h  WriteStream.cpp  WriteStream.h
Tank/docs/: ARCHITECTURE.md  HOW_TO_RUN.md  LOAD_CLIENT.md  PACKETS.md  PHYSICS.md  UNITY_PROTOCOL.md  gpc_metrics_2026_05_19.json  grafana_reading_guide.md  monitoring_stress_report.md  performance_benchmark.md  requirement.md  session_2026_05_17.md  stress_test_match.md  tick_dispatch.md
Tank/docs/images/GPC/: GPC_evaluation.md
Tank/load_client/: CMakeLists.txt
Tank/load_client/include/: Config.hpp  Metrics.hpp  PacketBuilder.hpp  UdpSocket.hpp  VirtualPlayer.hpp  WorkerThread.hpp
Tank/load_client/src/: Config.cpp  Metrics.cpp  PacketBuilder.cpp  UdpSocket.cpp  VirtualPlayer.cpp  WorkerThread.cpp  main.cpp
Tank/server_baseline/: CMakeLists.txt
Tank/server_baseline/src/: GameLoop.cpp  GameLoop.hpp  SessionTable.cpp  SessionTable.hpp  UdpServer.cpp  UdpServer.hpp  main.cpp
Tank/server_tank/: CMakeLists.txt  Server-Tank.cpp  Server-Tank.h
Tank/server_tank/assests/map/: bench_spread.json  world.json
Tank/server_tank/include/Core/: GameServer.hpp  Match.hpp  MatchConfig.hpp  MatchManager.hpp  MatchScheduler.hpp  MetricsCollector.hpp
Tank/server_tank/include/Entities/: Bullet.hpp  Tank.hpp
Tank/server_tank/include/Kafka/: KafkaConsumer.hpp  KafkaProducer.hpp
Tank/server_tank/include/Memory/: BufferPool.hpp  IoContext.hpp
Tank/server_tank/include/Network/: BlockingBackend.hpp  CommandDispatcher.hpp  GameCommand.hpp  GameHandlers.hpp  INetworkBackend.hpp  NetworkConstants.h  NetworkManager.hpp  Opcode.hpp  Packets.hpp  SessionManager.hpp
Tank/server_tank/include/Physics/: PhysicsTypes.hpp  PhysicsWorld.hpp  UniformGrid.hpp
Tank/server_tank/include/Utils/: Logger.hpp  ThreadPool.hpp  Vector2D.hpp
Tank/server_tank/include/World/: GameMap.hpp  GameWorld.hpp
Tank/server_tank/src/: main.cpp
Tank/server_tank/src/Core/: GameServer.cpp  Match.cpp  MatchManager.cpp  MatchScheduler.cpp
Tank/server_tank/src/Entities/: Bullet.cpp  Tank.cpp
Tank/server_tank/src/Kafka/: KafkaConsumer.cpp  KafkaConsumer_stub.cpp  KafkaProducer.cpp  KafkaProducer_stub.cpp
Tank/server_tank/src/Memory/: BufferPool.cpp
Tank/server_tank/src/Network/: BlockingBackend.cpp  CommandDispatcher.cpp  GameHandlers.cpp  NetworkManager.cpp  SessionManager.cpp
Tank/server_tank/src/Physics/: PhysicsWorld.cpp  UniformGrid.cpp
Tank/server_tank/src/Utils/: Logger.cpp
Tank/server_tank/src/World/: GameMap.cpp  GameWorld.cpp
Tank/unity_client/Scripts/Game/: BulletManager.cs  GameManager.cs  LocalTankController.cs  RemoteTankController.cs
docs/: BACKEND_ARCHITECTURE.md  MONITORING_DATA_COLLECTION.md  SE315_Q21_Report.tex
monitoring/: alert_rules.yml  grafana_dashboard.json  grafana_wc_live_dashboard.json  prometheus.yml  start_monitoring_stack.sh
test/: isolate_cores.ps1  k6_match_stress.js  latency_measure.py  stress_shoot.py  tank_metrics_agent.py  tank_stress_match.py
tools/: BACKEND_MECHANISM.md  CHEAT_MECHANISM.md  DEMO_GUIDE.md  build.bat  demo.sh  run_cheat.sh  tank_hp_hack.cpp
tools/anticheat/: README.md  anticheat.cpp  build.bat  run_anticheat.sh
tools/anticheat_km/: README.md  anticheat_km.c  build.bat  run_km.sh  setup_anticheat.ps1
tools/anticheat_km/loader/: loader.cpp
(+391 files in other folders)
